<resources>
    <string name="app_name">Skin_Diagnosis_App</string>
    <string name="title_activity_main_home">MainActivityHome</string>
    <string name="title_home">Home</string>
    <string name="title_saran">Saran</string>
    <string name="title_profile">profile</string>
    <string name="camera_x">CameraX</string>
    <string name="gallery">Galeri</string>

    <!--label-->
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="panduan">Panduan</string>
    <string name="deskripsi">Deskripsi</string>

    <!--home-->
    <string name="Desc_camera">camera</string>
    <string name="Desc_upload">Upload Gambar</string>
    <string name="Desc_panduan">Panduan</string>
    <string name="Desc_deskripsi">Deskripsi</string>
    <string name="Desc_profile">Profile</string>

    <!--camera-->
    <string name="Title_camera">Camera</string>

    <!--custom view-->
    <string name="error_email">Silahkan masukkan Email Anda</string>
    <string name="invalid_email">Email tidak valid!</string>
    <string name="password_more_6">Password harus lebih dari 6 karakter</string>
    <string name="copyright">© 2022 Bangkit Capstone Team C22-PS039</string>
    <string name="title_welcome_page">Selamat Datang di Skin Diagnosis App!</string>
    <string name="title_register_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="title_login_page">Sudah siap untuk mengetahui jenis penyakit kulit?</string>
    <string name="message_welcome_page">Ingin mengetahui jenis penyakit kulit akan tetapi Anda masih merasa bingung ? Jangan khawatir, kami akan membantu Anda. Yuk bergabung di Skin Diagnosis App!</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="not_have_account">Belum punya akun</string>


</resources>