<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Home_Frame"
    android:orientation="vertical"
    tools:context=".ui.ui.home.HomeFragment">

<!--cardviewpertama-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp">
        <!--cameraView-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cameraClick"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="170dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:contentPadding="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/cameraimg" />
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Desc_camera"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="10dp"
            android:layout_height="0dp"></View>
        <!--uploadView-->
        <androidx.cardview.widget.CardView
            android:id="@+id/uploadClick"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="170dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:contentPadding="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/uploadimg" />
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Desc_upload"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
<!--=============================-->
    <!--cardviewkedua-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp">
        <!--panduanView-->
        <androidx.cardview.widget.CardView
            android:id="@+id/panduanClick"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="170dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:contentPadding="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/panduanimg" />
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Desc_panduan"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="10dp"
            android:layout_height="0dp"></View>
        <!--deskripsiView-->
        <androidx.cardview.widget.CardView
            android:id="@+id/descriptionClick"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="170dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:contentPadding="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/deskripsiimg" />
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Desc_deskripsi"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>